--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -75,29 +75,22 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iOP-dO-AJg">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iOP-dO-AJg">
                                             <rect key="frame" x="8" y="18" width="65" height="65"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="Hpu-dm-UhU"/>
-                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70" id="Y8a-kT-cvK"/>
                                                 <constraint firstAttribute="width" constant="65" id="dIJ-f8-WgE"/>
                                                 <constraint firstAttribute="height" constant="65" id="ieR-PX-bSq"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="iOP-dO-AJg" firstAttribute="top" secondItem="WQX-aM-SP8" secondAttribute="top" constant="8" id="1Ly-hS-DmD"/>
-                                        <constraint firstItem="iOP-dO-AJg" firstAttribute="top" secondItem="WQX-aM-SP8" secondAttribute="top" constant="8" id="4MP-Y9-xAc"/>
                                         <constraint firstItem="kJ2-DZ-Doa" firstAttribute="trailing" secondItem="WQX-aM-SP8" secondAttribute="trailingMargin" id="7sn-3B-3EQ"/>
-                                        <constraint firstItem="iOP-dO-AJg" firstAttribute="top" secondItem="WQX-aM-SP8" secondAttribute="top" id="EEo-Yd-CFP"/>
-                                        <constraint firstItem="iOP-dO-AJg" firstAttribute="top" secondItem="WQX-aM-SP8" secondAttribute="top" constant="10" id="Eu0-Um-wmR"/>
+                                        <constraint firstItem="iOP-dO-AJg" firstAttribute="top" relation="greaterThanOrEqual" secondItem="WQX-aM-SP8" secondAttribute="top" id="EEo-Yd-CFP"/>
                                         <constraint firstItem="kJ2-DZ-Doa" firstAttribute="bottom" secondItem="WQX-aM-SP8" secondAttribute="bottomMargin" id="F1N-S7-64Q"/>
                                         <constraint firstItem="kJ2-DZ-Doa" firstAttribute="leading" secondItem="iOP-dO-AJg" secondAttribute="trailing" constant="8" id="JE9-O1-h0d"/>
                                         <constraint firstItem="juo-WI-iwf" firstAttribute="leading" secondItem="iOP-dO-AJg" secondAttribute="trailing" constant="8" id="TZl-fL-ngr"/>
                                         <constraint firstItem="juo-WI-iwf" firstAttribute="top" secondItem="WQX-aM-SP8" secondAttribute="topMargin" id="b5w-jW-Del"/>
-                                        <constraint firstItem="iOP-dO-AJg" firstAttribute="leading" secondItem="WQX-aM-SP8" secondAttribute="leading" constant="10" id="dmx-c3-KQO"/>
                                         <constraint firstItem="kJ2-DZ-Doa" firstAttribute="top" secondItem="juo-WI-iwf" secondAttribute="bottom" constant="4" id="gY0-oT-jG4"/>
-                                        <constraint firstItem="iOP-dO-AJg" firstAttribute="leading" secondItem="WQX-aM-SP8" secondAttribute="leading" id="i6Z-ai-nwV"/>
                                         <constraint firstItem="juo-WI-iwf" firstAttribute="top" secondItem="WQX-aM-SP8" secondAttribute="topMargin" id="nD0-aT-KEH"/>
                                         <constraint firstItem="iOP-dO-AJg" firstAttribute="leading" secondItem="WQX-aM-SP8" secondAttribute="leading" constant="8" id="nXv-EU-Zcx"/>
                                         <constraint firstItem="juo-WI-iwf" firstAttribute="leading" secondItem="iOP-dO-AJg" secondAttribute="trailing" constant="8" id="sfj-IE-9XW"/>
